# js_of_ocaml

./: .envrc.example  .gitignore  APLAN.md  ARCH.md  CLAUDE.md  COMPAT.md  DEPS.md  ENV.md  EXECUTION.md  LINKING.md  LUA.md  LUA_STATUS.md  MAJOR.md  OPTIMAL_LINKING.md  PARTIAL.md  PRIMITIVES_REFACTORING.md  README_lua_of_ocaml.md  REFACTORING_ROADMAP.md  REFACTOR_PLAN.md  RUNTIME.md  SELF_HOSTING.md  SESSION_SUMMARY.md  SPLAN.md  TASK_2_3_CLOSURE_ANALYSIS.md  TASK_2_4_JS_COMPARISON.md  TASK_2_5_1_JS_DISPATCH_ANALYSIS.md  TASK_2_5_4_PROTOTYPE.md  TASK_2_5_5_REPORT.md  TASK_2_5_PARTIAL_FIX.md  TASK_2_7_COMPLETE.md  TASK_2_8_COMPLETE.md  TASK_3_2_INVESTIGATION.md  TASK_3_3_4_COMPLETE.md  TASK_3_3_4_PLAN.md  TASK_3_3_PARTIAL.md  TASK_5_3K_FINAL.md  TASK_5_3K_REGRESSION.md  TASK_5_3K_SOLUTION.md  TASK_5_3K_SUCCESS.md  TASK_5_3K_SUMMARY.md  (+33 more)
compiler/bin-lua_of_ocaml/: cmd_arg.ml  compile.ml  dune  info.ml  lua_of_ocaml.ml  lua_of_ocaml.mli
compiler/lib-lua/: dune  lua_ast.ml  lua_generate.ml  lua_generate.mli  lua_link.ml  lua_link.mli  lua_mlvalue.ml  lua_mlvalue.mli  lua_of_ocaml_compiler.ml  lua_output.ml  lua_reserved.ml  lua_traverse.ml  lua_traverse.mli
compiler/lib-lua-runtime/: dune
compiler/tests-jsoo/: empty_sourcemap.t  gh1845.t
compiler/tests-lua/: bench_lua_generate.ml  dune  minimal_exec.ml  test_array.ml  test_ast_construction.ml  test_bytes_and_chars.ml  test_calling_conventions.ml  test_closure_capture.ml  test_closure_context.ml  test_closure_handling.ml  test_closures.ml  test_conditional_calls.ml  test_control_flow.ml  test_direct_calls.ml  test_edge_cases.ml  test_entry_block_params.ml  test_exceptions.ml  test_execution.ml  test_execution_debug.ml  test_functions.ml  test_hello_lua_execution.ml  test_hoisting_fix.ml  test_ir_debug.ml  test_linker.ml  test_lists.ml  test_loop_block_args.ml  test_lua_arith.ml  test_lua_array.ml  test_lua_cond_gen.ml  test_lua_expr_gen.ml  test_lua_ffi.ml  test_lua_fixes.ml  test_lua_func_gen.ml  test_lua_generate.ml  test_lua_interop.ml  test_lua_io.ml  test_lua_module.ml  test_lua_record_variant.ml  test_lua_stmt_gen.ml  test_lua_string.ml  (+23 more)
compiler/tests-lua/examples/factorial/: factorial.ml
compiler/tests-lua/examples/fibonacci/: fibonacci.ml
compiler/tests-lua/examples/list_operations/: dune
compiler/tests-lua/stdlib_audit/: ARRAY_COVERAGE.md  HASHTBL_COVERAGE.md  LIST_COVERAGE.md  STRING_COVERAGE.md  dune  test_array.ml  test_hashtbl.ml  test_list.ml  test_list.ml.bc  test_string.bc  test_string.ml  test_string.ml.bc
compiler/tests-lua/util/: dune  util.ml
docs/archive/: ASSESSMENT.md  NEXT_STEPS_5_3K.md  README.md  TASK_2_5_2_IR_ANALYSIS.md  TASK_2_5_3_LUA_DISPATCH_DESIGN.md  TASK_2_6_ANALYSIS.md  TASK_3_1_FINDINGS.md  TASK_3_3_1_COMPLETE.md  TASK_3_3_3_COMPLETE.md  TASK_5_3K3_FINDINGS.md  TASK_5_3K3_STATUS.md  TASK_5_3K_COMPLETE.md  TASK_5_3K_FINAL_STATUS.md  TASK_5_3K_NEXT.md  TASK_5_3K_PROGRESS.md  TASK_5_3K_REMAINING.md  XPLAN_PHASE2_TASK2.md  XPLAN_PHASE3_TASK2.md  XPLAN_PHASE4_FORMAT_FIX_PLAN.md  XPLAN_PHASE4_IMPLEMENTATION.md  XPLAN_PHASE4_TRUTHINESS_BUG.md
examples/: README_lua_examples.md
examples/calculator/: calculator.bc  calculator.ml  dune
examples/factorial/: dune  factorial.bc
examples/fibonacci/: dune  fibonacci.bc
examples/hello_lua/: README.md  dune  hello.bc  hello.ml  hello.ml.bc.debug.lua
examples/list_operations/: list_ops.bc  list_ops.ml
examples/quicksort/: dune  quicksort.bc  quicksort.ml
examples/tree/: dune  tree.bc  tree.ml
lib/lua_of_ocaml/: dune  lua.ml  lua.mli
runtime/lua/: .gitignore  COMPAT_MATRIX.md  DEEP_IO.md  IO_GUIDE.md  LUAJIT_NOTES.md  LUAU_NOTES.md  MARSHAL.md  MARSHAL_USAGE.md  PRIMITIVES.md  README.md  TEST_RESULTS.md  TEST_VERIFICATION_REPORT.md  USER_GUIDE.md  array.lua  array.lua.backup  benchmark_io.lua  benchmark_marshal.lua  benchmarks.lua  bigarray.lua  bool.lua  buffer.lua  call_helpers.lua  check_refactored.sh  closure.lua  compare.lua  compat_bit.lua  core.lua  digest.lua  domain.lua  effect.lua  fail.lua  filename.lua  float.lua  format.lua  fun.lua  gc.lua  gen_marshal_test_data.ml  hash.lua  hashtbl.lua  ints.lua  (+88 more)
