(executable
 (name test_package)
 (libraries lua_of_ocaml_compiler)
 (modules test_package))

(executable
 (name test_ast_construction)
 (libraries lua_of_ocaml_compiler)
 (modules test_ast_construction))

(executable
 (name test_output)
 (libraries lua_of_ocaml_compiler)
 (modules test_output))

(executable
 (name test_reserved)
 (libraries lua_of_ocaml_compiler)
 (modules test_reserved))

(library
 (name test_mlvalue)
 (libraries lua_of_ocaml_compiler)
 (modules test_mlvalue)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_generate)
 (libraries lua_of_ocaml_compiler str)
 (modules test_lua_generate)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_expr_gen)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_expr_gen)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_stmt_gen)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_stmt_gen)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_cond_gen)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_cond_gen)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_func_gen)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_func_gen)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_arith)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_arith)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_string)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_string)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_array)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_array)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_io)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_io)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_module)
 (libraries lua_of_ocaml_compiler str)
 (modules test_lua_module)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_record_variant)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_record_variant)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name test_lua_ffi)
 (libraries lua_of_ocaml_compiler)
 (modules test_lua_ffi)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(rule
 (alias runtest)
 (package lua_of_ocaml-compiler)
 (action
  (run ./test_package.exe)))

(rule
 (alias runtest)
 (package lua_of_ocaml-compiler)
 (action
  (run ./test_ast_construction.exe)))

(rule
 (alias runtest)
 (package lua_of_ocaml-compiler)
 (action
  (run ./test_output.exe)))

(rule
 (alias runtest)
 (package lua_of_ocaml-compiler)
 (action
  (run ./test_reserved.exe)))
